# MISA-C-Compiler

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
Mnemonimov Manual/: Doc Comment Format.md  Overview.md  Specification Scope.md
Mnemonimov Manual/Assembly/: Bookmarks.md  Built-In Symbols.md  Comments.md  Constants.md  Embed and Reserve.md  Expressions.md  Glossary.md  Labels.md  Literals.md  Types and Files.md
Mnemonimov Manual/Execution Model/: Common Mistakes.md  Cooperative Execution.md  Kernel and Processes.md  Lifecycle and Communication.md  Quick Review.md  Round-Robin Scheduling.md
Mnemonimov Manual/Instructions/: Arithmetic.md  Bit Manipulation.md  Control Flow.md  Data Transfer.md  Drawing.md  Floating-Point.md  Logic and Bitwise.md  Overview.md  System.md  Vector.md
Mnemonimov Manual/Machine Model/: Graphics.md  Memory.md  Registers.md  Storage.md
Mnemonimov Manual/Platform Interface/: ABI Conventions.md  System Calls.md
include/: ast.h  codegen.h  symtab.h
src/: ast.c  codegen.c  parser.c  sema.c
tests/: add.asm  allocator_test.asm  array.asm  array.c  cell_width.asm  external_var.asm  external_var.c  fib.asm  fptr.asm  include.asm  included.asm  local_func.asm  string.asm  struct.asm
